--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -23,4 +23,12 @@
         android:id="@+id/action_delete"
         android:title="@string/action_delete"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/settings"
+        app:showAsAction="never"
+        />
+
+
 </menu>
